# RobotJoystick

./: readme.md
Client/: CMakeLists.txt  build.sh
Client/include/: client.h  tcp.h
Client/src/: client.cpp  tcp.cpp
Client/test/: joystickClient.cpp
Server/: CMakeLists.txt  build.sh
Server/include/: message.hpp  server.h
Server/src/: server.cpp
Server/test/: serverJoystick.cpp
